--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/model-viewer": "^3.5.0",
+    "@gsap/react": "^2.1.1",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.53.0",
     "axios": "^1.2.3",
     "catch": "^1.0.48",
     "clean": "^4.0.2",
+    "dotenv": "^16.0.3",
     "feather-icons-react": "^0.6.2",
+    "gsap": "^3.12.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
-    "react-stars": "^2.2.5",
     "sass": "^1.57.1",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
